--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "starter-lib",
+  "name": "@baadal-sdk/utils",
   "version": "0.1.0",
-  "description": "Starter kit for package development",
+  "description": "Common utils for developers",
   "main": "dist/cjs/index.js",
   "module": "dist/esm/index.js",
   "typings": "dist/types/index.d.ts",
@@ -97,7 +97,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/baadal/starter-lib.git"
+    "url": "git+https://github.com/baadal/utils.git"
   },
-  "homepage": "https://github.com/baadal/starter-lib#readme"
+  "homepage": "https://github.com/baadal/utils#readme"
 }
